<resources>
    <string name="app_name">ServPro</string>
    <string name="txtTitle">Do you want to continue with...</string>
    <string name="btnService">Services</string>
    <string name="radBtnForService">Services</string>
    <string name="radBtnForRegister">Upload Your Service</string>
    <string name="btnNext">Next</string>
    <string name="txtForSignIn">Already a member?</string>
    <string name="btnLogIn">Log In</string>
    <string name="forCity">Enter the name for city</string>
    <string name="forService">Enter the Service you are looking in</string>
    <string name="city">Vancouver</string>
    <string name="btnShow">Show Services</string>

    <string name="providerImage">Image</string>
    <string name="providerName"> Name</string>
    <string name="providerCity">City</string>
    <string name="providerOccupation">Occupation</string>
    <string name="providerAddress">Address</string>
    <string name="providerPhone">Phone</string>
    <string name="providerServices">Services</string>
    <string name="btnRegister">Register</string>
    <string name="regText">Register</string>
    <string name="textHint">Enter Full Name</string>
    <string name="emailHint">Email-ID</string>
    <string name="AddressHint">Enter Complete Address</string>
    <string name="alreadyText">Already Registered</string>
    <string name="logintext">Login</string>
    <string name="LOGIN">LOGIN</string>
    <string name="thnk_reg">Thankyou for registering with us ..</string>
    <string-array name="services">
        <item>Laundry</item>
        <item>Hair Spa</item>
        <item>Grocery</item>
        <item>Restraunts</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="txtEmail">Email</string>
    <string name="textClickToView">Click Here All To See</string>
    <string name="btnViewAllServices">All Services</string>
    <string name="EmailHint">EMAIL ID</string>
    <string name="txtSelectADate">Select a period</string>
    <string name="txtTypeAMessage">Type A Message</string>

</resources>